Fix TrashIcon alignment in ExamInput.js

--- a/html/scss/caps.scss
+++ b/html/scss/caps.scss
@@ -7,7 +7,7 @@ h6 {
     margin-bottom: 0;
 }
 
-.attachment {
+.attachment, .exam-input {
     list-style-type: none;
 }
 
